manifests/istio/routing-advanced/load-balancer/destination-rule-recommendation_lb_policy_app.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: recommendation

spec:
  host: recommendation
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
