manifests/istio/routing-advanced/load-balancer/recommendation-destination-rule-lb_policy_random.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: recommendation
spec:
  host: recommendation
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
